# five-letters

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: lib.rs  main.rs
