[package]
name = "five-letters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "3.2.16", features = ["derive"] }
criterion = {version = "0.3.6", features = ["html_reports"]}
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
crossbeam-utils = "0.8.11"
get-size = { version = "0.1.1", features = ["derive"] }
itertools = "0.10.3"
kdam = "0.2.2"

[[bench]]
name = "bench"
harness = false
